--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                     <p class="form__message" id="personal-favorite-account-number-message"></p>
                                 </div>
                                 <div class="form__section form__section--fixed">
-                                    <button class="button button--icon button--primary" type="submit" id="account-add-button">
+                                    <button class="button button--icon button--primary" type="submit" id="personal-favorite-account-form-button">
                                         <svg class="button__icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="currentColor">
                                             <path d="M0 0h24v24H0V0z" fill="none"/>
                                             <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
@@ -136,7 +136,7 @@
                     <!-- Account list -->
                     <section class="grid__section">
                         <div class="section section--column">
-                            <h3 class="section__title">Comptes enregistrés <span id="saved-accounts"></span></h3>
+                            <h3 class="section__title">Comptes enregistrés <span id="personal-favorite-account-sum-text"></span></h3>
                             <div class="paper section__body">
                                 <div class="paper__frame">
                                     <table class="paper__table" id="account-delete-list"></table>
