feat: add forms actions

--- a/index.html
+++ b/index.html
@@ -270,9 +270,9 @@
                         <form class="form" id="enterprise-deposit-form" novalidate>
                             <h2 class="form__title">Effectuer un dépot</h2>
                             <div class="form__section form__section--margin">
-                                <label class="form__label" for="enterprise-deposit-input">Montant du dépot</label>
-                                <input class="form__input" type="text" name="enterprise-deposit-amount" id="enterprise-deposit-input" placeholder="Entrer le montant du dépot" required pattern="[0-9]+">
-                                <p class="form__message" id="enterprise-deposit-message"></p>
+                                <label class="form__label" for="enterprise-deposit-amount-input">Montant du dépot</label>
+                                <input class="form__input" type="text" name="enterprise-deposit-amount" id="enterprise-deposit-amount-input" placeholder="Entrer le montant du dépot" required pattern="[0-9]+">
+                                <p class="form__message" id="enterprise-deposit-amount-message"></p>
                             </div>
                             <div class="form__row">
                                 <div class="form__section form__section--fixed">
@@ -289,9 +289,9 @@
                         <form class="form" id="enterprise-withdraw-form" novalidate>
                             <h2 class="form__title">Effectuer un retrait</h2>
                             <div class="form__section form__section--margin">
-                                <label class="form__label" for="enterprise-withdraw-input">Montant du retrait</label>
-                                <input class="form__input" type="text" name="enterprise-withdraw-amount" id="enterprise-withdraw-input" placeholder="Entrer le montant du retrait" required pattern="[0-9]+">
-                                <p class="form__message" id="enterprise-withdraw-message"></p>
+                                <label class="form__label" for="enterprise-withdraw-amount-input">Montant du retrait</label>
+                                <input class="form__input" type="text" name="enterprise-withdraw-amount" id="enterprise-withdraw-amount-input" placeholder="Entrer le montant du retrait" required pattern="[0-9]+">
+                                <p class="form__message" id="enterprise-withdraw-amount-message"></p>
                             </div>
                             <button class="button button--text button--primary">Retirer</button>
                         </form>
@@ -330,9 +330,9 @@
                         <form class="form" id="offshore-deposit-form" novalidate>
                             <h2 class="form__title">Effectuer un dépot</h2>
                             <div class="form__section form__section--margin">
-                                <label class="form__label" for="offshore-deposit-input">Montant du dépot</label>
-                                <input class="form__input" type="text" name="offshore-deposit-amount" id="offshore-deposit-input" placeholder="Entrer le montant du dépot" required pattern="[0-9]+">
-                                <p class="form__message" id="offshore-deposit-message"></p>
+                                <label class="form__label" for="offshore-deposit-amount-input">Montant du dépot</label>
+                                <input class="form__input" type="text" name="offshore-deposit-amount" id="offshore-deposit-amount-input" placeholder="Entrer le montant du dépot" required pattern="[0-9]+">
+                                <p class="form__message" id="offshore-deposit-amount-message"></p>
                             </div>
                             <div class="form__row">
                                 <div class="form__section form__section--fixed">
