feat: add form classes

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             <p class="section__number" id="personal-account-number"></p>
                         </div>
                     </section>
-                    <!-- Account add form -->
+                    <!-- Account add form.js -->
                     <section class="grid__section">
                         <form class="form" id="personal-favorite-account-form" novalidate>
                             <h2 class="form__title">Ajouter un destinataire</h2>
@@ -146,7 +146,7 @@
             <!-- View / personal operation -->
             <div class="view" id="personal-operation-tab-view">
                 <div class="grid grid--operation">
-                    <!-- Operation deposit form -->
+                    <!-- Operation deposit form.js -->
                     <section class="grid__section grid__section--with-border">
                         <form class="form" id="personal-deposit-form" novalidate>
                             <h2 class="form__title">Effectuer un dépot</h2>
@@ -174,7 +174,7 @@
                             </div>
                         </div>
                     </section>
-                    <!-- Operation Withdraw form -->
+                    <!-- Operation Withdraw form.js -->
                     <section class="grid__section">
                         <form class="form" id="personal-withdraw-form" novalidate>
                             <h2 class="form__title">Effectuer un retrait</h2>
@@ -192,7 +192,7 @@
             <!-- View / personal transfer -->
             <div class="view" id="personal-transfer-tab-view">
                 <div class="grid grid--transfer">
-                    <!-- Transfer form -->
+                    <!-- Transfer form.js -->
                     <section class="grid__section">
                         <form class="form" id="personal-transfer-form" novalidate>
                             <h2 class="form__title">Effectuer un transfert</h2>
@@ -263,7 +263,7 @@
                             <p class="section__number" id="enterprise-account-balance"></p>
                         </div>
                     </section>
-                    <!-- Enterprise deposit form -->
+                    <!-- Enterprise deposit form.js -->
                     <section class="grid__section grid__section--with-border">
                         <form class="form" id="enterprise-deposit-form" novalidate>
                             <h2 class="form__title">Effectuer un dépot</h2>
@@ -282,7 +282,7 @@
                             </div>
                         </form>
                     </section>
-                    <!-- Enterprise withdraw form -->
+                    <!-- Enterprise withdraw form.js -->
                     <section class="grid__section">
                         <form class="form" id="enterprise-withdraw-form" novalidate>
                             <h2 class="form__title">Effectuer un retrait</h2>
@@ -323,7 +323,7 @@
                             <p class="section__number" id="offshore-account-balance"></p>
                         </div>
                     </section>
-                    <!-- offshore deposit form -->
+                    <!-- offshore deposit form.js -->
                     <section class="grid__section">
                         <form class="form" id="offshore-deposit-form" novalidate>
                             <h2 class="form__title">Effectuer un dépot</h2>
